<resources>
    <string name="app_name">MTIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">SignIn</string>
    <string name="attendance_registration"> Registration</string>
    <string name="attendance_departure"> Departure</string>
    <string name="time_now">08:00:00</string>
    <string name="attendance_and_departure">Attendance and Departure</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint login makes signing in to your official business time much faster. Your device must have at least one fingerprint registered in the device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="recent_messages">Recent Messages</string>
    <string name="salary">Salary</string>
    <string name="zakatimg">ZakatImg</string>
    <string name="salaryimg">SalaryImg</string>
    <string name="portfolioimg">PortfolioImg</string>
    <string name="transactionimg">TransactionImg</string>
    <string name="clockimg">ClockImg</string>
    <string name="attendanceimg">AttendanceImg</string>
    <string name="departureimg">departureImg</string>
    <string name="zakat">Zakat</string>
    <string name="portfolio">Portfolio</string>
    <string name="transaction">Transaction</string>
    <string name="employee_vacations">Employee Vacations</string>
    <string name="request_vacation">Request Vacation</string>
    <string name="employee_vacation_balances">Employee Vacation Balances</string>
    <string name="accrued_vacation">Accrued Vacation</string>
    <string name="executed_vacation">Executed Vacation</string>
    <string name="special_permission_deduction">Special Permission </string>
    <string name="balance_carried_forward">Balance Forward</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="normal_vacation">Normal Vacation</string>
    <string name="vacation_type">Vacation Type</string>
    <string name="casual_vacation">Casual vacation</string>
    <string name="select_year">Select Year</string>
    <string name="salary_description">Salary Description</string>
    <string name="clearance_description">Clearance Description</string>
    <string name="mohsen_afana">Mohsen Afana</string>
    <string name="Title">Title</string>
    <string name="title_toolbar">Title</string>
    <string name="drawer_open_content_desc">open</string>
    <string name="drawer_close_content_desc">close</string>
    <array name="colors">
        <item>#ffffff</item>
        <item>#000000</item>
        <item>#f0f</item>
    </array>
</resources>
