<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/salaryRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell">

        <ImageView
            android:id="@+id/salartIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/salaryimg"
            android:src="@drawable/ic_salary" />

        <TextView
            android:id="@+id/salartTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salartIv"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/salary"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ZakatRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_below="@+id/salaryRelative"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell">

        <ImageView
            android:id="@+id/zakatIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/zakatimg"
            android:src="@drawable/ic_zakat" />

        <TextView
            android:id="@+id/zakatIvTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zakatIv"
            android:layout_centerInParent="true"
            android:text="@string/zakat"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PortfolioRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_below="@+id/ZakatRelative"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell">

        <ImageView
            android:id="@+id/portfolioManagementIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/portfolioimg"
            android:src="@drawable/ic_portfolio_management" />

        <TextView
            android:id="@+id/portfolioManagementTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/portfolioManagementIv"
            android:layout_centerInParent="true"
            android:text="@string/portfolio"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/TransactionRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_below="@+id/PortfolioRelative"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell">

        <ImageView
            android:id="@+id/TransactionfromSalaryIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/transactionimg"
            android:src="@drawable/ic_outstanding_transactions" />

        <TextView
            android:id="@+id/TransactionfromSalaryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TransactionfromSalaryIv"
            android:layout_centerInParent="true"
            android:text="@string/transaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </RelativeLayout>


</RelativeLayout>