<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/EmployeeVacations"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="OnClick">

        <ImageView
            android:id="@+id/EmployeeVacationsIV"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/salaryimg"
            android:src="@drawable/vacation_employee_ic" />

        <TextView
            android:id="@+id/EmployeeVacationsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/employee_vacations"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ZakatRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/zakatIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/zakatimg"
            android:src="@drawable/permission_ic" />

        <TextView
            android:id="@+id/zakatIvTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zakat"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PortfolioRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/portfolioManagementIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/portfolioimg"
            android:src="@drawable/work_time_ic" />

        <TextView
            android:id="@+id/portfolioManagementTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/portfolio"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>


</LinearLayout>