<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.mohsenafana.mtit.Fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profile"
        android:name="com.mohsenafana.mtit.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profile_to_employeeServicesFragment2"
            app:destination="@id/employeeServicesFragment2" />
    </fragment>

    <fragment
        android:id="@+id/fingerprint"
        android:label="@string/attendance_and_departure"
        tools:layout="@layout/fragment_fingerprint" />
    <fragment
        android:id="@+id/employeeServicesFragment2"
        android:name="com.mohsenafana.mtit.Fragments."
        android:label="fragment_employee_services"
        tools:layout="@layout/employee_services_layout" />


</navigation>