<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/select_year"
            style="@style/TextViewStyle"
            android:text="@string/select_year">

        </TextView>

        <Spinner

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/salary_description"
            style="@style/ButtonStyle1"
            android:gravity="center"
            android:text="@string/salary_description" />


        <Button
            android:id="@+id/Clearance_description"
            style="@style/ButtonStyle1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/clearance_description" />

    </LinearLayout>

</LinearLayout>