<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/notification_bell"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/title_toolbar"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/title_toolbar"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_toolbar"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/EmployeeVacations"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="OnClick">

        <ImageView
            android:id="@+id/EmployeeVacationsIV"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:clickable="true"
            android:contentDescription="@string/salaryimg"
            android:focusable="true"
            android:src="@drawable/vacation_employee_ic" />

        <TextView
            android:id="@+id/EmployeeVacationsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/employee_vacations"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ZakatRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/zakatIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/zakatimg"
            android:src="@drawable/permission_ic" />

        <TextView
            android:id="@+id/zakatIvTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zakat"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PortfolioRelative"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cell"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/portfolioManagementIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/portfolioimg"
            android:src="@drawable/work_time_ic" />

        <TextView
            android:id="@+id/portfolioManagementTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/portfolio"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>


</LinearLayout>